# bazaar

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  agent.py  constants.py  judge.py  prompt.py  pyproject.toml  tools.py
agent/: api.py  graph.py  main.py  nodes.py  prompt_manager.py  state.py  storage.py
client/: package.json
client/src/app/: layout.tsx  page.tsx
client/src/components/: FileUpload.tsx  ReviewGuidance.tsx
client/src/lib/: api.ts
docs/: hackathon_idea.excalidraw.md
docs/.obsidian/: workspace.json
docs/hackathon/: focus_group_video_review_loop.md
focus_group_reviewer/: api.py  graph.py  main.py  nodes.py  prompt_manager.py  state.py  storage.py
focus_group_reviewer_client/: next.config.ts  pnpm-lock.yaml
focus_group_reviewer_client/src/app/: globals.css
focus_group_reviewer_client/src/components/: PersonasSection.tsx  PromptForm.tsx  Shimmer.tsx  VideoReviewPanel.tsx
focus_group_reviewer_client/src/lib/: aggregate.ts  api.ts  types.ts
hackathon/: agent.py  focus_group_agent.py
learning/: research_assistant_agent.py
templates/: create_focus_group.hbs  judge_prompt.hbs  prepare_input.hbs  review_content.hbs  system_prompt.j2
templates/hackathon/: create_focus_group_system_prompt.hbs
tests/: conftest.py  test_application_lang.py  test_focus_group_agent.py  test_prompt_manager.py
