[project]
name = "arize-pheonix-playground"
version = "0.1.0"
description = "Playground project for toying around with Phoenix and LLM observability auto-instrumentation."
authors = [
    {name = "Shabd Saran",email = "saranshabd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "arize-phoenix (>=16.2.0,<17.0.0)",
    "langchain (>=1.3.2,<2.0.0)",
    "langchain-google-genai (>=4.2.3,<5.0.0)",
    "openinference-instrumentation-langchain (>=0.1.66,<0.2.0)",
    "arize-phoenix-otel (>=0.16.1,<0.17.0)",
    "arize-phoenix-client (>=2.7.0,<3.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "ipdb (>=0.13.13,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
