[project]
name = "bazaar"
version = "0.1.0"
description = "AI focus groups for video feedback."
authors = [
    {name = "Shabd Saran",email = "saranshabd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "arize-phoenix (>=16.2.0,<17.0.0)",
    "langchain (>=1.3.2,<2.0.0)",
    "langchain-google-genai (>=4.2.3,<5.0.0)",
    "openinference-instrumentation-langchain (>=0.1.66,<0.2.0)",
    "arize-phoenix-otel (>=0.16.1,<0.17.0)",
    "arize-phoenix-client (>=2.7.0,<3.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "openinference-instrumentation (>=0.1.52,<0.2.0)",
    "overrides (>=7.7.0,<8.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "fire (>=0.7.1,<0.8.0)",
    "ddgs (>=9.14.4,<10.0.0)",
    "langchain-google-vertexai (>=3.2.3,<4.0.0)",
    "openinference-instrumentation-vertexai (>=0.1.16,<0.2.0)",
    "google-cloud-storage (>=3.11.0,<4.0.0)",
    "google-cloud-aiplatform[preview] (>=1.155.0,<2.0.0)",
    "google-genai (>=2.8.0,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include="agent"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"
